Cleaned upped CLI